--- a/Лабораторна/Views/Shared/_Layout.cshtml
+++ b/Лабораторна/Views/Shared/_Layout.cshtml
@@ -5,12 +5,18 @@
 	<title>@ViewBag.Title</title>
 	<link href="@Url.Content("~/css/site.css")" rel="stylesheet"
 		  type="text/css" />
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-	<nav>
-		<ul class="menu">
-			<li>@Html.ActionLink("Головна", "Index", "Home")</li>
-		</ul>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+		<div class="container-fluid">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+					@Html.ActionLink("Головна", "Index", "Home")
+                </li>
+            </ul>
+		</div>
 	</nav>
 	@RenderBody()
 </body>
